# MyOS2

./: .gitignore  BootLoader.efi  CMakeLists.txt  LICENSE  README.md  bootloader.efi  bugs_record.md  bugs_record.txt  changelog.md  dbg-qemu.sh  dbg-vmw.sh  elf_loader.efi  elfbinary_loader.efi  gdb-qemu.txt  gdb-vmw.txt  gdbcmds.txt  install.sh  lldbcmds.txt  make&install.sh  make_install.sh  note.c  notes.c  prepare_env.sh  real_nvme_install.sh  test.c  test.sh  todo.txt
initd/: CMakeLists.txt  init.c  init.lds  initd.c  initd.lds
kernel/: CMakeLists.txt  CMakeLists.txt.bak  dbg_utils.c  exception.c  ext2.c  fat32.c  fs.c  glo.h  main.c  memory.c  mod_test.c  param.h  proc.c  proto.h  softirq.c  syscall.c  task.c  timer.c  vfs.c  video.c
kernel/arch/: CMakeLists.txt
kernel/arch/aarch64/: CMakeLists.txt
kernel/arch/amd64/: AP_boot.S  CMakeLists.txt  CMakeLists.txt.bak  HPET.c  LVT_timer.c  apic.c  apic_timer.c  arch_mm.c  arch_page_util.c  arch_proc.c  arch_task.c  asm_wrapper.c  clock.c  device.c  disk.c  entry.S  entry_64.S  exclusive.c  grub2_boot_code.S  head.S  head_64.S  head_higher_half.S  i8259.c  ide.c  interrupt.c  intterupt.c  kernel.lds  kernel.lds.bak  keyboard.c  lvt_timer.c  mm.c  mpx.S  mutex.c  myos_AP_boot.S  myos_APboot.S  myos_head_64.S  myos_head_higher_half.S  pg_utils.c  port_io.S  port_io.c  (+9 more)
kernel/arch/x86_64/: CMakeLists.txt  kernel.lds
kernel/block/: CMakeLists.txt  bdev.c  blk.h  efi.h  fops.c  genhd.c  part_core.c  part_efi.c
kernel/device/: CMakeLists.txt  timer.c  video.c
kernel/drivers/: CMakeLists.txt
kernel/drivers/ata/: CMakeLists.txt  libata-core.c  libata-sff.c  libata.h  myos_libata.c
kernel/drivers/base/: CMakeLists.txt  class.c  core.c  devtmpfs.c  driver_init.c  map.c
kernel/drivers/char/: CMakeLists.txt  char_dev.c  mem.c  myos_tty.c  tty_io.c
kernel/drivers/scsi/: CMakeLists.txt  sd.c
kernel/fs/: CMakeLists.txt
kernel/fs/ext2/: CMakeLists.txt  ext2.c
kernel/fs/fat/: CMakeLists.txt  dir.c  fat32 copy.c  fat32.c  fat32_iobuf.c  fat32_namei.c  inode.c  inode_vfat.c  namei_vfat.c
kernel/fs/kernfs/: CMakeLists.txt  dir.c
kernel/fs/sysfs/: CMakeLists.txt  mount.c
kernel/fs/vfs/: CMakeLists.txt  buffer.c  (+22 more)
kernel/include/: GPT.h  MBR.h  block.h  block_dev.h  const.h  dcache.h  err.h  ext2.h  fat32.h  fs.h  glo.h  ktypes.h  kutils.h  memblock.h  memory.h  minmax.h  mm.h  mmzone.h  namei.h  page.h  param.h  printk.h  proc.h  proto.h  slab.h  task.h  vfs.h  wait_queue.h
kernel/init/: CMakeLists.txt  do_mounts.c  main.c
kernel/klib/: CMakeLists.txt  bitmap.c  data_structure.h  errno.c  list.c  myos_list.c  printk.c  utils.c  wait_queue.c
kernel/lib/: CMakeLists.txt  myos_vsnprintf.c  string.c  vsprintf.c
kernel/mechanics/: CMakeLists.txt  workqueue.c
kernel/mm/: CMakeLists.txt  buddy.c  init-mm.c  init.c  init_64.c  internal.h  memblock.c  memory.c  mempolicy.c  mm.c  myos_mm.c  page_alloc.c  shmem.c  slab.c  slab.h  slab_common.c  zone.c
kernel/proc/: CMakeLists.txt  exec.c  fork.c  kthread.c  myos_task.c
kernel/sched/: CMakeLists.txt  completion.c  core.c  idle.c  sched.h  swait.c  task.c
kernel/test/: CMakeLists.txt  dbg_utils.c  mod_test.c
kernel/time/: CMakeLists.txt  timer.c
myinitramfs/: CMakeLists.txt
myinitramfs/myinit/: CMakeLists.txt  init.c  initd.c
myinitramfs/myshell/: CMakeLists.txt  externs.h  myshell.c  tests.c  tests.h
mykernel/: CMakeLists.txt  gen_asm_offsets.rsp  kbuild.cmake  options_flags.cmake  prebuild.cmake
mykernel/arch/: CMakeLists.txt
mykernel/block/: bdev.c  blk.h  efi.h  fops.c  genhd.c  part_check.h  part_core.c  part_efi.c
mykernel/debug/: panic.c
mykernel/device/: myos_timer.c  myos_video.c
mykernel/drivers/: CMakeLists.txt
mykernel/entry/: common.c
mykernel/fs/: CMakeLists.txt  syscall.c
mykernel/init/: do_mounts.c  init_task.c  main.c
mykernel/kactive/: CMakeLists.txt  completion.c  kactive_api.h  kactive_const.h  kactive_type_declaration.h  kactive_types.h  swait.c  workqueue.c
mykernel/kern_active/: swait.c
mykernel/klib/: font.c  myos_list.c  printk.c
mykernel/lib/: CMakeLists.txt  bcd.c  bitmap.c  ctype.c  errname.c  kasprintf.c  kstrtox.c  kstrtox.h  lib_api.h  lib_const.h  lib_type_declaration.h  lib_types.h  list_api.h  string.c  string_helpers.c  strnlen_user.c  vsprintf.c
mykernel/lock_IPC/: CMakeLists.txt  atomic_api.h  lock_ipc_api.h  lock_ipc_const.h  lock_ipc_type_declaration.h  lock_ipc_types.h  spinlock_api.h  syscall.c
mykernel/mechanics/: workqueue.c
mykernel/mm/: CMakeLists.txt  earlymem_api.h  filemap.c  init-mm.c  init_64.c  internal.h  kmalloc_api.h  memblock.c  memblock_api.h  memfault_api.h  memory.c  mempolicy.c  misc_api.h  mm_api.h  mm_const.h  mm_highmem_api.h  mm_init.c  mm_misc_api.h  mm_type_declaration.h  mm_types.h  mmap.c  myos_slab.c  page_alloc.c  page_alloc_api.h  percpu.c  rmap.c  shmem.c  slab_common.c  syscall.c  util.c  vm_map_api.h
mykernel/myos_test/: dbg_utils.c  mod_test.c
mykernel/namespace/: nsproxy.c
mykernel/printk/: internal.h  printk.c  printk_ringbuffer.h
mykernel/proc/: exec.c  fork.c  kthread.c  myos_task.c  pid.c
mykernel/sched/: CMakeLists.txt  clock.c  completion.c  core.c  forkexec_api.h  idle.c  myos.c  preempt_api.h  runqueue_api.h  sched.h  sched_api.h  sched_const.h  sched_misc_api.h  sched_type_declaration.h  sched_types.h  scheduler_api.h  swait.c  syscall.c  task_api.h
mykernel/scripts/: asm-offset_copy_asm.py  asm-offsets_generate.py  options_flags.cmake  target_kbuild.cmake  target_kernel.cmake
mykernel/signal/: CMakeLists.txt  signal.c  signal_api.h  signal_const.h  signal_type_declaration.h  signal_types.h  syscall.c
mykernel/test/: dbg_utils.c
mykernel/time/: CMakeLists.txt  clocksource.c  jiffies.c  myos_timer.c  syscall.c  tick-internal.h  time.c  time_api.h  time_const.h  time_type_declaration.h  time_types.h  timekeeper_internal.h  timekeeping.c  timekeeping.h  timekeeping_internal.h  timer.c
mylib/csu/: CMakeLists.txt  crt1_c.c
mylib/myglibc/: CMakeLists.txt
myshell/: CMakeLists.txt  command.h  eval.c  myshell.c  shell.c  shell.lds
(+1831 files in other folders)
